--- a/instagram/src/components/CommentSection/CommentSection.css
+++ b/instagram/src/components/CommentSection/CommentSection.css
@@ -18,3 +18,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+/*  */
+
+.commentSection {
+	border: 1px solid purple;
+	width: 920px;
+	height: 180px;
+	margin: 0 auto;
+	margin-top: 262px;
+}
