--- a/instagram/src/components/PostContainer/PostContainer.css
+++ b/instagram/src/components/PostContainer/PostContainer.css
@@ -18,3 +18,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+/*  */
+
+.postContainer {
+	border: 1px solid red;
+	width: 976px;
+	height: 500px;
+	display: inline-block;
+	margin-top: 64px;
+}
