--- a/instagram/src/components/SearchBar/SearchBar.css
+++ b/instagram/src/components/SearchBar/SearchBar.css
@@ -18,3 +18,13 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
+
+/*  */
+
+.searchBar {
+	border: 1px solid green;
+	width: 976px;
+	height: 180px;
+	display: inline-block;
+	margin-top: 146px;
+}
